--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1901,3 +1901,252 @@ a:visited {
   right: 0px;
   padding-right: 18px;
 }
+.head_step {
+  padding-top: 25px;
+  color: #999;
+  width: 386px;
+}
+.head_step .step_txtList {
+  list-style: none;
+  float: right;
+}
+.head_step .step_txtList li {
+  float: left;
+  font-size: 14px;
+  width: 96px;
+  text-align: center;
+}
+.head_step .step_txtList li:first-child {
+  color: #ff7b7e;
+  font-size: 15px;
+}
+.head_step .stepBar {
+  width: 100%;
+  margin-top: 10px;
+  background-image: url(../img/def_grey_step.png);
+  background-repeat: no-repeat;
+  height: 30px;
+  position: relative;
+  z-index: 0;
+  float: right;
+}
+.head_step .stepBar .pastStep {
+  width: 25%;
+  height: 30px;
+  background-image: url(../img/sel_red_step.png);
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  z-index: 5;
+}
+#car-main .container {
+  width: 980px;
+}
+#car-main .container .main {
+  border: 1px solid #e7e7e7;
+  background: #fff;
+  width: 980px;
+  padding: 20px;
+}
+#car-main .container .main .page-order {
+  width: 100%;
+  font-size: 12px;
+  line-height: 20px;
+}
+#car-main .container .main .page-order .mod-pageHeader {
+  margin-bottom: 16px;
+  height: 38px;
+  line-height: 35px;
+  border-bottom: 1px solid #e7e7e7;
+  position: relative;
+}
+#car-main .container .main .page-order .mod-pageHeader .pageHeader_headline {
+  font-size: 14px;
+  height: 98%;
+  margin-right: 30px;
+  float: left;
+  font-weight: bold;
+  color: #3c3c3c;
+  font-family: "\5FAE\8F6F\96C5\9ED1";
+  border-bottom: 2px solid #ee394b;
+}
+#car-main .container .main .page-order .mod-pageHeader .pageHeader_info a {
+  height: 22px;
+  line-height: 22px;
+  border: 1px solid #ee394b;
+  border-radius: 2px;
+  background: #ee394b;
+  color: #fff;
+  display: inline-block;
+  text-align: center;
+  padding: 0 20px;
+  font-size: 12px;
+  margin: 0 10px;
+}
+#car-main .container .main .title .title-box {
+  border: 1px solid #e7e7e7;
+  background: #f7f7f7;
+  width: 100%;
+  height: 38px;
+  line-height: 38px;
+}
+#car-main .container .main .title .title-box li {
+  float: left;
+  text-align: center;
+  font-size: 12px;
+  color: #777;
+}
+#car-main .container .main .title .title-box .check {
+  width: 56px;
+  color: #777;
+}
+#car-main .container .main .title .title-box .detail {
+  width: 364px;
+}
+#car-main .container .main .title .title-box .price {
+  width: 101px;
+}
+#car-main .container .main .title .title-box .num {
+  width: 141.6px;
+}
+#car-main .container .main .title .title-box .disbursements {
+  width: 172px;
+}
+#car-main .container .main .title .title-box .trade_operate {
+  width: 101px;
+}
+#car-main .container .main .product-box .product-list {
+  border: 1px solid #e7e7e7;
+  background: #fff7f7;
+  width: 100%;
+  height: 100px;
+  line-height: 100px;
+}
+#car-main .container .main .product-box .product-list li {
+  float: left;
+  text-align: center;
+  font-size: 12px;
+  color: #777;
+}
+#car-main .container .main .product-box .product-list .check {
+  width: 40px;
+  color: #777;
+}
+#car-main .container .main .product-box .product-list .detail {
+  width: 373.6px;
+  padding: 10px 0;
+}
+#car-main .container .main .product-box .product-list .detail > a {
+  float: left;
+  height: 80px;
+  width: 80px;
+  line-height: 80px;
+}
+#car-main .container .main .product-box .product-list .detail .orderItems_content {
+  height: 80px;
+  width: 283.6px;
+  float: right;
+  position: relative;
+}
+#car-main .container .main .product-box .product-list .detail .orderItems_content a {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 27.2px;
+  line-height: 13.6px;
+  text-align: left;
+  color: #3c3c3c;
+}
+#car-main .container .main .product-box .product-list .detail .orderItems_content .tx-inline {
+  height: 13.6px;
+  font-size: 12px;
+  color: #999;
+  position: absolute;
+  top: 35px;
+  left: 0;
+  line-height: 14px;
+}
+#car-main .container .main .product-box .product-list .price {
+  width: 111px;
+}
+#car-main .container .main .product-box .product-list .num {
+  width: 140.6px;
+}
+#car-main .container .main .product-box .product-list .num input {
+  height: 30px;
+  width: 82px;
+  text-align: center;
+}
+#car-main .container .main .product-box .product-list .disbursements {
+  width: 170px;
+  font-size: 18px;
+  color: #ee394b;
+}
+#car-main .container .main .product-box .product-list .trade_operate {
+  width: 100px;
+}
+#car-main .container .main .product-box .product-list .trade_operate a {
+  color: #777;
+}
+#car-main .container .main .car-end .end-box {
+  border: 1px solid #e7e7e7;
+  background: #f7f7f7;
+  width: 100%;
+  height: 58.7px;
+  line-height: 58.7px;
+}
+#car-main .container .main .car-end .end-box li {
+  float: left;
+  text-align: center;
+  font-size: 12px;
+  color: #777;
+}
+#car-main .container .main .car-end .end-box .check {
+  width: 85px;
+}
+#car-main .container .main .car-end .end-box .del {
+  width: 48px;
+}
+#car-main .container .main .car-end .end-box .shoucang {
+  width: 60px;
+  margin-left: 10px;
+}
+#car-main .container .main .car-end .end-box .clear-car {
+  width: 60px;
+  margin-left: 10px;
+}
+#car-main .container .main .car-end .end-box .btn-jiesuan {
+  float: right;
+  margin-right: 10px;
+  width: 112px;
+  height: 100%;
+}
+#car-main .container .main .car-end .end-box .btn-jiesuan .jiesuan {
+  width: 112px;
+  height: 40px;
+  background: #ee394b;
+  font-size: 18px;
+  display: inline-block;
+  color: #fff;
+  margin-top: 10px;
+  line-height: 40px;
+  border-radius: 5px;
+}
+#car-main .container .main .car-end .end-box .money {
+  width: 170px;
+  float: right;
+  margin-right: 16px;
+}
+#car-main .container .main .car-end .end-box .money span {
+  font-size: 18px;
+  color: #ee394b;
+}
+#car-main .container .main .car-end .end-box .num {
+  width: 67.65px;
+  margin-right: 17px;
+  float: right;
+}
+#car-main .container .main .car-end .end-box .num em {
+  color: #ee394b;
+}
